fix spacing in .teams | clean up css

--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ div[class^="col_"] > img{
     color:gray;
 }
 div.border_bot:empty{
-    width:20%;
+    width:4rem;
 }
 /* #region buttons */
 .btn{
@@ -192,7 +192,7 @@ div.border_bot:empty{
     color: blue;
 }
 .border_bot{
-    border-bottom: 1px solid gray;
+    border-bottom: 1.5px solid lightgray;
 }
 
 /* #region icons */
@@ -240,10 +240,11 @@ body{
 }
 h1{
     font-size: 4.5rem;
-    padding: 5% 0;
+    padding: 4rem 0;
 }
 h2{
     font-size: 3rem;
+    padding: 1rem 0;
 }
 h3{
     font-size: 2rem;
@@ -391,19 +392,27 @@ i{
 section.teams{
     margin: 0;
 }
+.teams .hyperlink{
+    margin: 3rem 0;
+
+}
 .brands_stripe{
     height: 609.297px;
+    margin-top: 2rem;;
 }
 .brands_container{
     float: left;
     width: 30%;
     height: 100%;
 }
+.brand_selected{
+    border: 15px solid rgba(255, 255, 255, 0.5);
+}
 .focus_brand{
     float: left;
     width: 40%;
     height: 100%;
-    padding: 3rem;
+    padding: 4rem 3rem;
     background: #F5F5F5;
 }
 .focus_brand > img{
@@ -423,6 +432,7 @@ section.teams{
     left: 50%;
     transform: translate(-50%,-50%);
 }
+/* #region brands background */
 .designit{
     background: #A2D39B;
 }
@@ -447,6 +457,7 @@ section.teams{
 .clear_channel{
     background: #FED830;
 }
+/* #endregion brands background */
 
 /* cta section (4) */
 .cta{
